# webp-viewer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  changelog.md  readme.md
.github/workflows/: build-clang.yml  build-gcc.yml  clang.yml  gcc.yml  msys2.yml  package.yml  package_debian.yml
ci/: .dockerignore  01-install-dependencies.sh  02-create-package.sh  Dockerfile_debian  Dockerfile_fedora  copy-dll-dependencies.sh
cmake/: webp-config.cmake  webpdemux-config.cmake
debian/: changelog  control  copyright  rules  watch  webp-viewer.install
documentation/: msys2-build.md  third-party.md
tests/: CMakeLists.txt
tests/webp-viewer-tests/: CMakeLists.txt  buffer.cpp  detect_ci.cpp  detect_ci.hpp  dimensions.cpp  glfw.cpp  image_data.cpp  locate_catch.hpp  main.cpp  scaling.cpp  title.cpp  webp-viewer-tests.cbp
webp-viewer/: CMakeLists.txt  buffer.cpp  buffer.hpp  dimensions.hpp  gl_util.cpp  gl_util.hpp  glfw.cpp  glfw.hpp  image_data.cpp  image_data.hpp  main.cpp  return_codes.hpp  scaling.cpp  scaling.hpp  title.cpp  title.hpp  viewer.cpp  viewer.hpp  webp-viewer.cbp  webp.cpp  webp.hpp
